--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,75 @@
-.container {
+.container-fluid {
     font-family: "Work Sans", sans-serif;
     color: #2d3c49;
+    padding-right: 0;
+    padding-left: 0;
+}
+.row {
+    margin: 0;
 }
 
+#main, .page-header-wrapper,
+.bottom-hr-line {
+    max-width: 55em;
+    margin: 0 auto;
+}
 
 /* === HEADER === */
 
-header {
-    margin-top: 1.2%;
+.page-header-wrapper {
+    max-height: 175px;
+    /*min-height: 275px;*/
+    background: lightblue;
+    /*background-image: url("../images/DSC05073.JPG");*/
+    background-size: 100% 100%;
+    /*background-size: 772px 276px;*/
+    /*text-align: left;*/
+
 }
+
+#banner-area {
+    padding: 70px 0 70px 25px;
+    /*font-weight: 400;*/
+    /*padding-top: 80px;*/
+    /*padding-bottom: 80px;*/
+}
+
+#banner-area > * {
+    margin: auto;
+
+}
+
+h1 {
+    font-size: 25px;
+    /*font-weight: 300;*/
+
+}
+
+h3 {
+    font-size: 15px;
+    padding-top: 1%;
+    /*margin: auto;*/
+}
+/*#banner-area {*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*!*align-items: center;*!*/
+/*}*/
+/*.innerCol {*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;     !* Align the flex-items vertically *!*/
+    /*justify-content: center; !* Optional, to align inner flex-items*/
+                              /*horizontally within the column  *!*/
+/*}*/
+
+.main-section-img {
+
+}
+
+/*.header {*/
+    /*margin-top: 1.2%;*/
+/*}*/
 
 .header-picture-wrap {
     padding-top: 0.9%;
@@ -19,50 +80,88 @@ header {
     padding-bottom: 5%;
 }
 
-h1 {
-    font-size: 2.4rem;
-    font-weight: 300;
-    margin: auto;
-}
 
-h3 {
-    font-size: 1rem;
-    padding-top: 1%;
-    margin: auto;
-}
 
 
 /* === MAIN SECTION === */
 
-.main-section-img {
-    max-height: 100px;
-    min-width: 100%;
-    object-fit: cover;
-}
 
-.main-section-heading {
-    font-size: 2.4rem;
+#main-header {
+    font-size: 25px;
     padding-top: 2%;
     padding-bottom: 1%;
     margin: auto;
     text-align: center;
-    color: #a5b2bd;
+    text-transform: uppercase;
+    /*color: #7d97ad;*/
 }
 
-.main-section-prj-container {
+#main-header-bar {
+    margin: 2% 45% 5% 45%;
+    width: 10%;
+    height: 3px;
+    background: #000000;;
+}
+
+#gallery {
+    /*margin: 0;*/
+    padding: 15px;
+}
+
+.gallery-card-holder {
+    padding: 0;
     text-align: center;
+    min-width: 230px;
+    margin: 0 15px 40px 0;
 }
 
- .project-img {
-     height: 200px;
-     margin: auto;
- }
+.gallery-card-holder:last-of-type {
+    margin-right: 0;
+}
 
- .project-img-caption {
-     font-size: 2rem;
-     font-weight: 500;
-     text-transform: uppercase;
- }
+.gallery-img-holder {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    margin: 0 0 15px 0;
+}
+
+.gallery-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-left: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #a09e9e;
+    border-bottom: 1px solid #a09e9e;
+    background-color: #fcfcfc;
+    padding: 4px;
+}
+
+.gallery-img-caption {
+    font-size: 2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.btn {
+    border-radius: 0;
+    border: 0;
+}
+
+.gallery-bar {
+    margin: 3% 45% 3% 45%;
+    width: 10%;
+    height: 3px;
+    background: #000000;
+    /*height: 3px;*/
+    /*width: 25%;*/
+    /*background: #04C2C9;*/
+    /*margin: 10px 0px;*/
+}
+
 
 
  /* === FOOTER === */
@@ -79,14 +178,14 @@ footer p {
 
 /* === HORIZONTAL LINES === */
 
-.top-hr-line {
-    border: 1px solid #7d97ad;
-    min-height: 0;
-    margin: 2% 0 2% 0;
-}
+/*.top-hr-line {*/
+    /*border: 1px solid #7d97ad;*/
+    /*min-height: 0;*/
+    /*margin: 2% 0 2% 0;*/
+/*}*/
 
-.bottom-hr-line {
-    border: 1px solid #7d97ad;
+.bottom-hr-line hr:only-child {
+    border: 1px solid #000000;
     min-height: 0;
     margin: 2% 0 0.5% 0;
 }
@@ -94,28 +193,42 @@ footer p {
 
 /* === MEDIA QUERIES === */
 
-@media (min-width: 768px) {
+@media screen and (min-width: 600px) {
+    .page-header-wrapper {
+        /*background-image: url("../images/DSC05073.JPG");*/
+    }
+}
+
+@media screen and (min-width: 768px) {
     h1 {
-        font-size: 4rem;
+        /*font-size: 4rem;*/
     }
 
     h3 {
-        font-size: 1.4rem;
+        /*font-size: 1.4rem;*/
     }
 
-    .img-logo {
-        max-height: 55px;
-        padding-bottom: 3%;
+    /*.img-logo {*/
+        /*max-height: 55px;*/
+        /*padding-bottom: 3%;*/
+    /*}*/
+
+    /*.main-section-img {*/
+        /*max-height: 300px;*/
+    /*}*/
+
+    .gallery-card-holder {
+        width: calc((100% - 30px)/3);
     }
 
-    .main-section-img {
-        max-height: 300px;
-    }
-
-    .main-section-heading {
+    .header {
         font-size: 3rem;
-        text-align: left;
-        padding-left: 25px;
+        /*text-align: center;*/
+        /*padding-left: 25px;*/
+    }
+
+    .gallery-img {
+        /*height: 220px;*/
     }
 
     footer {
@@ -127,13 +240,13 @@ footer p {
     }
 }
 
-@media (min-width: 992px) {
+@media screen and (min-width: 992px) {
     h1 {
-        font-size: 4.5rem;
+        /*font-size: 4.5rem;*/
     }
 
     h3 {
-        font-size: 1.6rem;
+        /*font-size: 1.6rem;*/
     }
 
     .img-logo {
@@ -141,12 +254,16 @@ footer p {
         padding-bottom: 2%;
     }
 
-    .project-img-caption {
-        font-size: 2.2rem;
+    .gallery-img-caption {
+        /*font-size: 2.2rem;*/
+    }
+
+    .gallery-img {
+        /*height: 300px;*/
     }
 }
 
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
     .img-logo {
         padding-bottom: 1%;
     }
@@ -157,15 +274,56 @@ footer p {
         object-fit: cover;
     }
 
-    .project-img {
-        height: 350px;
+    .gallery-img {
+        /*height: 450px;*/
     }
 
-    .project-img-caption {
-        font-size: 3rem;
+    .gallery-img-caption {
+        /*font-size: 3rem;*/
     }
 
     footer {
         font-size: 1.3rem;
     }
+}
+
+@media print and (orientation: portrait) {
+    .gallery-card-holder {
+        width: 100%;
+    }
+
+}
+
+
+@media print and (orientation: landscape) {
+    html, body {
+        height: 100%;
+    }
+
+    h1 {
+        /*font-size: 4.5rem;*/
+    }
+
+    h3 {
+        /*font-size: 1.6rem;*/
+    }
+
+    main + .row, footer  {
+        display: none;
+    }
+
+    .img-logo {
+        max-height: 60px;
+        padding-bottom: 2%;
+    }
+    .main-section-img {
+        max-height: 400px;
+        min-width: 100%;
+        object-fit: cover;
+    }
+
+    .gallery-card-holder {
+        width: 33.33333333%;
+    }
+
 }
