--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@
     height: 30vh;
     /*min-height: 275px;*/
     background: #000000;
-    background-image: url("../images/sakelari4.jpg");
+    background-image: url("../images/sakelari4_opt.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left center;
@@ -204,7 +204,7 @@ footer p {
 
 @media screen and (min-width: 600px) {
     .page-header-wrapper {
-        background-image: url("../images/sakelari4_opt.jpg");
+        background-image: url("../images/sakelari4_opt_opt.jpg");
     }
 
     h1 {
