optimize project images

--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ footer p {
 
 @media screen and (min-width: 600px) {
     .page-header-wrapper {
-        background-image: url("../images/sakelari4_opt_opt.jpg");
+        background-image: url("../images/sakelari4_opt.jpg");
     }
 
     h1 {
