--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .container-fluid {
     font-family: 'Oswald', sans-serif;
     color: #2d3c49;
@@ -24,25 +28,50 @@ img {
 
 /* === HEADER === */
 
-.page-header-wrapper {
-    height: 40vh;
-    background: #000000;
+.header-wrapper {
+    position: relative;
+    height: 30vh;
+    padding: 25px 15px 0 0;
+    text-align: right;
+    color: #fff;
+    background: #020202;
     background-image: url("../images/sakelari4_opt.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left center;
 }
 
-#banner-area {
-    padding: 35px 20px 0 0;
-    float: right;
-    margin: 0 auto;
+.hero-section-text {
+    /*padding: 35px 20px 0 0;*/
+    /*float: right;*/
+    /*margin: 0 auto;*/
 }
 
-#banner-area > * {
+.hero-section-text * {
     margin: auto;
-    color: white;
+    /*color: white;*/
+    /*text-align: right;*/
+
 }
+
+.hero-section-links {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+}
+
+.hero-section-links a {
+    position: relative;
+    color: #fff;
+    font-size: calc(.7rem + 0.9vw);
+}
+
+.hero-section-links a:hover,
+.hero-section-links a:focus {
+    /*text-decoration:underline;*/
+}
+
+
 
 h1 {
     font-size: calc(.7rem + 3vw);
@@ -51,13 +80,12 @@ h1 {
 h2 {
     font-size: calc(.7rem + 2vw);
     padding-top: 1%;
-    text-align: right;
     text-transform: lowercase;
 }
 
 /* === MAIN SECTION === */
 
-#main-header {
+.main-header {
     font-size: calc(.7rem + 1.8vw);
     padding-top: 2%;
     padding-bottom: 1%;
@@ -65,7 +93,7 @@ h2 {
     text-align: center;
 }
 
-#main-header-bar {
+.main-header-bar {
     margin: 0 auto;
     width: 10%;
     height: calc(.1rem + .1vw);
@@ -101,9 +129,11 @@ article > * {
 .article-img-holder {
     display: flex;
     align-content: center;
+    align-self: start;
 }
 
 .article-img {
+    margin-top: 1em;
     align-self: center;
 }
 
@@ -143,7 +173,7 @@ article > * {
     font-weight: normal;
 }
 
-#gallery {
+.gallery {
     padding: 15px;
 }
 
@@ -193,21 +223,67 @@ article > * {
     /*margin: 10px 0px;*/
 }
 
+#about-section {
+    background-color: #f7f7f6;
+    padding: 15px;
+}
+
+.about-text {
+    font-family: Lato, serif;
+    font-size: calc(.7rem + .9vw);
+    font-weight: 300;
+    line-height: 1.8em;
+    /*padding: 0 15px 0 15px;*/
+    padding: 15px;
+    margin: 15px 0;
+    /*background-color: #fff;*/
+}
+
+
+
 
 
  /* === FOOTER === */
 
 footer {
+    position: relative;
     /*display: flex;*/
     /*flex-direction: row;*/
-    height: 10vw;
+    height: 10vh;
     font-size: 0.9rem;
     margin-bottom: 1.2%;
-    background: #000000;
+    background: #020202;
 }
 
+
+
 footer p {
-    margin: auto;
+    /*margin: 0;*/
+
+    font-size: 2.8755rem;
+    line-height: 3.5rem;
+    font-weight: bold;
+    color: #ececec;
+    position: absolute;
+    /*left: 76px;*/
+    /*top: 60px;*/
+    z-index: -1;
+    /*transform: translateY(30px);*/
+    transition: .3s ease-out;
+
+    -webkit-transform: translateY(-50px);
+    -ms-transform: translateY(-50px);
+    transform: translateY(-50%);
+
+    color: rgba(0,0,0,0.6);
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
+
+    top: 50%;
+    margin: 0 auto;
+    width: 100%;
+    /*left: 0;*/
+    text-align: center;
+    /*height: 15vh;*/
 }
 
 ul {
@@ -219,6 +295,7 @@ ul {
     list-style-type: none;
     color: white;
     padding: 0;
+    margin: 0;
 }
 
 ul li {
@@ -231,10 +308,12 @@ ul a {
     position: relative;
     color: white;
     font-size: calc(.7rem + .8vw);
-    transition: all 0.2s linear;
+    /*transition: all 0.2s linear;*/
     /*transition: color 0.2s linear;*/
 }
 
+.hero-section-links a:before,
+.hero-section-links a:after,
 ul a:before,
 ul a:after {
     position: absolute;
@@ -242,20 +321,26 @@ ul a:after {
     content: "";
     background: white;
     width: 0;
-    height: 2px;
+    height: 1px;
     transition: all 0.2s linear;
 }
 
+.hero-section-links a:before,
 ul a:before {
     top: 0;
     left: 0;
 }
 
+.hero-section-links a:after,
 ul a:after {
     top: 100%;
     right: 0;
 }
 
+.hero-section-links a:hover:before,
+.hero-section-links a:hover:after,
+.hero-section-links a:focus:before,
+.hero-section-links a:focus:after,
 ul a:hover:before,
 ul a:hover:after,
 ul a:focus:before,
@@ -270,6 +355,84 @@ ul a:focus:after {
     min-height: 0;
     margin: 2% 0 0.5% 0;
 }
+
+/*.scroll-top {*/
+    /*display: none;*/
+    /*position: fixed;*/
+    /*bottom: 15vh;*/
+    /*right: 30px;*/
+    /*z-index: 99;*/
+    /*font-size: 18px;*/
+    /*border: none;*/
+    /*outline: none;*/
+    /*background-color: #ee164e;*/
+    /*color: white;*/
+    /*cursor: pointer;*/
+    /*padding: 16px;*/
+
+    /*border-radius: 50%;*/
+
+/*}*/
+
+/*.scroll-top:after {*/
+    /*content: "";*/
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*transform: scaleY(0);*/
+    /*transform-origin: bottom center;*/
+    /*background: blue;*/
+    /*z-index: -1;*/
+    /*transition: transform 0.3s;*/
+/*}*/
+
+/*.scroll-top:hover,*/
+/*.scroll-top:focus {*/
+    /*transform: scaleY(1);*/
+    /*color: #fff;*/
+/*}*/
+
+
+
+.scroll-top {
+    display: none;
+    position: fixed;
+    bottom: calc(10vh + 15px);
+    right: 15px;
+    z-index: 99;
+    font-size: 18px;
+    /*border: none;*/
+    /*outline: none;*/
+    /*background-color: #ee164e;*/
+    /*color: white;*/
+    /*cursor: pointer;*/
+    padding: 5px 15px 10px;
+    color: #fff;
+    border-radius: 0;
+    border: 1px solid #ee164e;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    user-select: none;
+    background-image: linear-gradient(#fff, #fff);
+    background-repeat: no-repeat;
+    transition: background-size .3s, color .3s;
+    background-position: 0 50%;
+    background-size: 0 100%;
+    background-color: #ee164e;
+
+}
+
+.scroll-top:hover {
+    background-size: 100% 100%;
+    color: #2d3c49;
+}
+
+
 
 /* === MEDIA QUERIES === */
 
@@ -295,9 +458,12 @@ ul a:focus:after {
     .article-bttns {
         left: calc(50% - 84px);
     }
-    .page-header-wrapper {
+
+    .header-wrapper {
+        height: 40vh;
         background-image: url("../images/sakelari4_opt.jpg");
     }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -307,6 +473,14 @@ ul a:focus:after {
 
     .top-hr-line, .bottom-hr-line {
         border-width: 2px;
+    }
+
+    footer {
+        height: 15vh;
+    }
+
+    .scroll-top {
+        bottom: calc(15vh + 25px);
     }
 }
 
