--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ img {
     height: 30vh;
     padding: 25px 15px 0 0;
     text-align: right;
-    color: #fff;
+    color: #e7e6e6;
     background: #020202;
     background-image: url("../images/sakelari4_opt.jpg");
     background-size: contain;
@@ -41,17 +41,18 @@ img {
     background-position: left center;
 }
 
-.hero-section-text {
-    /*padding: 35px 20px 0 0;*/
-    /*float: right;*/
-    /*margin: 0 auto;*/
+h1 {
+    font-size: calc(.7rem + 3vw);
+}
+
+h2 {
+    font-size: calc(.7rem + 2vw);
+    padding-top: 1%;
+    text-transform: lowercase;
 }
 
 .hero-section-text * {
     margin: auto;
-    /*color: white;*/
-    /*text-align: right;*/
-
 }
 
 .hero-section-links {
@@ -62,25 +63,36 @@ img {
 
 .hero-section-links a {
     position: relative;
-    color: #fff;
+    color: #e7e6e6;
     font-size: calc(.7rem + 0.9vw);
 }
 
-.hero-section-links a:hover,
-.hero-section-links a:focus {
-    /*text-decoration:underline;*/
+
+.hero-section-links a:before,
+.hero-section-links a:after {
+    position: absolute;
+    content: "";
+    background: white;
+    width: 0;
+    height: 1px;
+    transition: all 0.2s linear;
 }
 
-
-
-h1 {
-    font-size: calc(.7rem + 3vw);
+.hero-section-links a:before {
+    top: 0;
+    left: 0;
 }
 
-h2 {
-    font-size: calc(.7rem + 2vw);
-    padding-top: 1%;
-    text-transform: lowercase;
+.hero-section-links a:after {
+    top: 100%;
+    right: 0;
+}
+
+.hero-section-links a:hover:before,
+.hero-section-links a:hover:after,
+.hero-section-links a:focus:before,
+.hero-section-links a:focus:after {
+    width: 100%;
 }
 
 /* === MAIN SECTION === */
@@ -94,10 +106,11 @@ h2 {
 }
 
 .main-header-bar {
-    margin: 0 auto;
+    margin: 0 auto 1em;
     width: 10%;
     height: calc(.1rem + .1vw);
     background: #2d3c49;
+    /*margin-bottom: 1em;*/
 }
 
 article {
@@ -227,17 +240,25 @@ article > * {
 
 #about-section {
     background-color: #f7f7f6;
-    padding: 15px;
+}
+
+#about-section .main-header-bar {
+    width: 6%;
 }
 
 .about-text {
+    padding: 15px;
+
+}
+
+.about-text p {
     font-family: Lato, serif;
     font-size: calc(.7rem + .9vw);
     font-weight: 300;
     line-height: 1.8em;
     /*padding: 0 15px 0 15px;*/
-    padding: 15px;
-    margin: 15px 0;
+    padding: 0 0 1em;
+    margin: 0;
     /*background-color: #fff;*/
 }
 
@@ -251,152 +272,39 @@ footer {
     position: relative;
     /*display: flex;*/
     /*flex-direction: row;*/
-    height: 10vh;
+    /*height: 10vh;*/
     font-size: 0.9rem;
     margin-bottom: 1.2%;
     background: #020202;
 }
 
-
-
-footer p {
-    /*margin: 0;*/
-
-    font-size: 2.8755rem;
-    line-height: 3.5rem;
-    font-weight: bold;
-    color: #ececec;
-    position: absolute;
-    /*left: 76px;*/
-    /*top: 60px;*/
-    z-index: -1;
-    /*transform: translateY(30px);*/
-    transition: .3s ease-out;
-
-    -webkit-transform: translateY(-50px);
-    -ms-transform: translateY(-50px);
-    transform: translateY(-50%);
-
-    color: rgba(0,0,0,0.6);
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
-
-    top: 50%;
-    margin: 0 auto;
-    width: 100%;
-    /*left: 0;*/
-    text-align: center;
-    /*height: 15vh;*/
+footer a {
+    color: #e7e6e6;
+    text-decoration: underline;
 }
 
-ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-content: center;
-    height: 100%;
-    list-style-type: none;
-    color: white;
-    padding: 0;
-    margin: 0;
+footer a:hover,
+footer a:focus {
+    text-decoration: none;
 }
 
-ul li {
-    align-self: center;
-    color: white;
-    letter-spacing: 0.6px;
+#contacts {
+    color: #e7e6e6;
+
 }
 
-ul a {
-    position: relative;
-    color: white;
-    font-size: calc(.7rem + .8vw);
-    /*transition: all 0.2s linear;*/
-    /*transition: color 0.2s linear;*/
+#contacts .main-header-bar {
+    background: #dbdada;
+
 }
 
-.hero-section-links a:before,
-.hero-section-links a:after,
-ul a:before,
-ul a:after {
-    position: absolute;
 
-    content: "";
-    background: white;
-    width: 0;
-    height: 1px;
-    transition: all 0.2s linear;
-}
-
-.hero-section-links a:before,
-ul a:before {
-    top: 0;
-    left: 0;
-}
-
-.hero-section-links a:after,
-ul a:after {
-    top: 100%;
-    right: 0;
-}
-
-.hero-section-links a:hover:before,
-.hero-section-links a:hover:after,
-.hero-section-links a:focus:before,
-.hero-section-links a:focus:after,
-ul a:hover:before,
-ul a:hover:after,
-ul a:focus:before,
-ul a:focus:after {
-    width: 100%;
-    /*text-decoration: underline;*/
-    /*color: #ee164e;*/
-}
 
 .bottom-hr-line hr:only-child {
     border: 1px solid #2d3c49;
     min-height: 0;
     margin: 2% 0 0.5% 0;
 }
-
-/*.scroll-top {*/
-    /*display: none;*/
-    /*position: fixed;*/
-    /*bottom: 15vh;*/
-    /*right: 30px;*/
-    /*z-index: 99;*/
-    /*font-size: 18px;*/
-    /*border: none;*/
-    /*outline: none;*/
-    /*background-color: #ee164e;*/
-    /*color: white;*/
-    /*cursor: pointer;*/
-    /*padding: 16px;*/
-
-    /*border-radius: 50%;*/
-
-/*}*/
-
-/*.scroll-top:after {*/
-    /*content: "";*/
-    /*position: absolute;*/
-    /*bottom: 0;*/
-    /*left: 0;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*transform: scaleY(0);*/
-    /*transform-origin: bottom center;*/
-    /*background: blue;*/
-    /*z-index: -1;*/
-    /*transition: transform 0.3s;*/
-/*}*/
-
-/*.scroll-top:hover,*/
-/*.scroll-top:focus {*/
-    /*transform: scaleY(1);*/
-    /*color: #fff;*/
-/*}*/
-
-
 
 .scroll-top {
     display: none;
@@ -405,11 +313,6 @@ ul a:focus:after {
     right: 15px;
     z-index: 99;
     font-size: 18px;
-    /*border: none;*/
-    /*outline: none;*/
-    /*background-color: #ee164e;*/
-    /*color: white;*/
-    /*cursor: pointer;*/
     padding: 5px 15px 10px;
     color: #fff;
     border-radius: 0;
@@ -422,11 +325,10 @@ ul a:focus:after {
     user-select: none;
     background-image: linear-gradient(#fff, #fff);
     background-repeat: no-repeat;
-    transition: background-size .3s, color .3s;
     background-position: 0 50%;
     background-size: 0 100%;
     background-color: #ee164e;
-
+    transition: background-size .3s, color .3s;
 }
 
 .scroll-top:hover {
@@ -459,7 +361,6 @@ ul a:focus:after {
     }
 
     .article-bttns {
-        /*left: calc(50% - 84px);*/
         right: calc(50% - 84px);
     }
 
@@ -477,10 +378,6 @@ ul a:focus:after {
 
     .top-hr-line, .bottom-hr-line {
         border-width: 2px;
-    }
-
-    footer {
-        height: 15vh;
     }
 
     .scroll-top {
@@ -536,4 +433,16 @@ ul a:focus:after {
     .gallery-card-holder {
         width: 33.33333333%;
     }
+}
+
+:target {
+    -webkit-animation: target-fade 3s;
+    -moz-animation: target-fade 3s;
+    -o-animation: target-fade 3s;
+    animation: target-fade 3s;
+}
+
+@keyframes target-fade {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
